--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
 
         <!-- Video 2 -->
-        <div class="video-item" onclick="playVideo('1QFenf1kYaU51xwLJ_G6KsoWTs6RE4TZq')">
+        <div class="video-item" onclick="playVideo('1QFenf1kYaU51xwLJ_G6KsoWTs6RE4TZq.hapus ini')">
             <img class="thumbnail" src="tmn5.jpg" alt="Thumbnail">
             <div class="video-info">
                 <h3 class="video-title">Vidio mendaki</h3>
